fixing spacing on bandcamp section.

--- a/assets/css/_albums.scss
+++ b/assets/css/_albums.scss
@@ -20,14 +20,16 @@
   // margin: 2rem 4rem;
   // padding: 10% 5%;
   padding: 2rem;
-  padding-top: 0;
+  padding-top: 4rem;
   // border-radius: 40% 60%;
   border-radius: 4px;
   // background: $blue__light-x;
   // box-shadow: 34px 4px 0px 20px rgba($blue__light-x, 1); 
   // animation: bandcamp2 3s ease-in-out 0s infinite forwards;
-  @include mobile {
+  @include nav-collapse {
     // margin: 4rem 0;
+    // padding: 0;
+    padding-top: 0.6rem;
   }
   .bandcamp-logo-wrapper {
     margin-top: 28px; 
